add display doctor first last name

--- a/doctor-lookup/index.html
+++ b/doctor-lookup/index.html
@@ -6,9 +6,13 @@
     <title>Doctors</title>
   </head>
   <body>
+    <div class="container-fluid">
+      <div class="well">
+        <h2>Doctor Lookup</h2>
+      </div>
+    </div>
     <div class="container">
-
-      <label for="medical-issue">Enter medicalIssue:</label>
+      <label for="medical-issue">Enter medical issue:</label>
       <input id="medical-issue" type="text">
       <button class="btn-success" id="issue-search">Search Doctors</button>
       <div class="showDoctor"></div>
